--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                 CSS, aimed at mimicking the user interface and functionality of the popular
                                 streaming platform. Key responsibilities and achievements. </p>
 
-                            <a href="#"><i class='bx bx-link-external' style="color:skyblue;"></i></a>
+                            <a href="https://netflix-clone-baibhav.netlify.app"><i class='bx bx-link-external' style="color:skyblue;"></i></a>
                         </div>
                     </div>
 
